<resources>
    <string name="app_name">Product Page</string>

    <!--Post page strings-->

    <string name="enter_price">Enter price</string>
    <string name="select_item">Select Item</string>
    <string name="caption1">Caption</string>
    <string name="enter_caption">Enter caption</string>
    <string name="price">Price</string>
    <string name="description1">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="selected_image">Selected Image</string>
    <string name="selected_image_preview">Selected image preview</string>
    <string name="add_image">Add Image</string>
    <string name="post1">Post</string>

</resources>